[package]
name = "gen_id_priority_queue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iter_context = { git = "https://github.com/frsrblch/iter_context" }
gen_id_allocator = { git = "https://github.com/frsrblch/gen_id_allocator", features = ["assert_valid", "id_creation", "untyped"] }
gen_id_component = { git = "https://github.com/frsrblch/gen_id_component" }

[dev-dependencies]
rand = "0.7"
